Add all 4 recipes, color change for recipes

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h2 class="top-foods__title">Top Foods</h2>
         <ul class="top-foods__items">
             <li class="top-foods__item">
-                <a href="#">
+                <a href="./recipes.html#coxinha">
                     <figure class="top-foods__figure">
                         <img src="./assets/images/coxinha.jpg" alt="A coxinha on a chopping board"
                             class="top-foods__photo">
@@ -91,7 +91,7 @@
                 </a>
             </li>
             <li class="top-foods__item">
-                <a href="#">
+                <a href="./recipes.html#feijoada">
                     <figure class="top-foods__figure">
                         <img src="./assets/images/feijoada.jpg"
                             alt="A feijoada (bean stew) inside of a bow with a dish with rice at the back"
@@ -101,7 +101,7 @@
                 </a>
             </li>
             <li class="top-foods__item">
-                <a href="#">
+                <a href="./recipes.html#pastel">
                     <figure class="top-foods__figure">
                         <img src="./assets/images/pastel.jpg"
                             alt="A few pastels in a plate with a sause bow in the midle" class="top-foods__photo">
@@ -110,7 +110,7 @@
                 </a>
             </li>
             <li class="top-foods__item">
-                <a href="#">
+                <a href="./recipes.html#mortadella-sandwich">
                     <figure class="top-foods__figure">
                         <img src="./assets/images/mortadella-sandwich.jpg"
                             alt="A mortadella sandwich on a chopping board with a knife close to it"
