--- a/recipes.html
+++ b/recipes.html
@@ -51,7 +51,7 @@
                 these tried-and-true recipes. Enjoy the art of cooking and savor the joy of sharing delicious meals with
                 family and friends.</p>
         </div>
-        <div class="recipes__recipe">
+        <div class="recipes__recipe" id="coxinha">
             <h2 class="recipes__title2">Coxinha</h2>
             <img src="./assets/images/coxinha.jpg" alt="A coxinha on a chopping board" class="recipes__photo">
             <div class="recipes__ingredients">
@@ -88,9 +88,133 @@
                 </ol>
             </div>
         </div>
+        <div class="recipes__recipe" id="feijoada">
+            <h2 class="recipes__title2">Feijoada</h2>
+            <img src="./assets/images/feijoada.jpg"
+                alt="A feijoada (bean stew) inside of a bow with a dish with rice at the back" class="recipes__photo">
+            <div class="recipes__ingredients">
+                <h3 class="recipes__titles">Ingredients:</h3>
+                <ul>
+                    <li>500 grams (1 pound) of dried black beans</li>
+                    <li>500 grams (1 pound) of pork ribs</li>
+                    <li>500 grams (1 pound) of carne seca (dried beef)</li>
+                    <li>250 grams (1/2 pound) of smoked sausage (linguiça)</li>
+                    <li>250 grams (1/2 pound) of bacon</li>
+                    <li>1 large onion, finely chopped</li>
+                    <li>4 cloves of garlic, minced</li>
+                    <li>2 bay leaves</li>
+                    <li>Salt and pepper to taste</li>
+                    <li>Water (enough to cover the beans and meats)</li>
+                    <li>Farofa (toasted manioc flour) for serving</li>
+                    <li>Rice for serving</li>
+                    <li>Orange slices for serving</li>
+                </ul>
+            </div>
+            <div class="recipes__instructions">
+                <h3 class="recipes__titles">Instructions:</h3>
+                <ol>
+                    <li>Rinse the black beans and soak them overnight in water. Drain and set aside.</li>
+                    <li>In a large pot, add the soaked beans and enough water to cover them. Bring to a boil and cook
+                        for about 1 hour or until the beans are tender. Remove from heat and set aside.</li>
+                    <li>In a separate pot, add the pork ribs and enough water to cover them. Bring to a boil and cook
+                        for 10 minutes. Drain and set aside.</li>
+                    <li>In another pot, add the carne seca and enough water to cover it. Bring to a boil and cook for 10
+                        minutes. Drain and set aside.</li>
+                    <li>In a large skillet, cook the bacon until crispy. Remove the bacon from the skillet and set
+                        aside. In the same skillet, add the smoked sausage and cook until browned. Remove and set aside.
+                    </li>
+                    <li>In the same skillet, add the chopped onion and minced garlic. Sauté until the onion is
+                        translucent.</li>
+                    <li>Add the cooked pork ribs, carne seca, smoked sausage, and bay leaves to the skillet with the
+                        sautéed onions and garlic. Cook for a few minutes to combine the flavors.</li>
+                    <li>Transfer the meat mixture to the pot with the cooked black beans. Add enough water to cover the
+                        beans and meats. Bring to a boil and reduce the heat to low. Simmer for about 2 hours, stirring
+                        occasionally, until the meats are tender and the flavors are well blended. Add salt and pepper
+                        to taste.</li>
+                    <li>Remove the bay leaves before serving.</li>
+                    <li>Serve the feijoada hot with steamed rice, farofa, and orange slices on the side.</li>
+                </ol>
+            </div>
         </div>
-
-
+        <div class="recipes__recipe" id="pastel">
+            <h2 class="recipes__title2">Pastel</h2>
+            <img src="./assets/images/pastel.jpg" alt="A few pastels in a plate with a sause bow in the midle"
+                class="recipes__photo">
+            <div class="recipes__ingredients">
+                <h3 class="recipes__titles">Ingredients:</h3>
+                <ul>
+                    <li>2 cups all-purpose flour</li>
+                    <li>1/2 teaspoon salt</li>
+                    <li>1/2 cup warm water</li>
+                    <li>2 tablespoons vegetable oil</li>
+                    <li>Filling of your choice (e.g., ground beef, cheese, ham, hearts of palm, etc.)</li>
+                    <li>Vegetable oil for frying</li>
+                </ul>
+            </div>
+            <div class="recipes__instructions">
+                <h3 class="recipes__titles">Instructions:</h3>
+                <ol>
+                    <li>In a mixing bowl, combine the all-purpose flour and salt.</li>
+                    <li>Gradually add the warm water and vegetable oil to the bowl while stirring continuously until a
+                        dough forms.</li>
+                    <li>Transfer the dough to a lightly floured surface and knead it for about 5 minutes until it
+                        becomes smooth and elastic.</li>
+                    <li>Shape the dough into a ball, cover it with a damp cloth, and let it rest for about 30 minutes.
+                    </li>
+                    <li>While the dough is resting, prepare the filling of your choice. You can cook ground beef with
+                        onions and spices, or mix cheese with herbs, or any other combination you prefer.</li>
+                    <li>After the dough has rested, divide it into smaller portions and roll each portion into a thin
+                        circle or rectangle (approximately 1/8 inch thick).</li>
+                    <li>Place a spoonful of the filling onto one half of the rolled-out dough, leaving a small border
+                        around the edges.</li>
+                    <li>Fold the other half of the dough over the filling, pressing the edges together to seal it. You
+                        can use a fork to crimp the edges for a decorative touch.</li>
+                    <li>Repeat the process with the remaining dough and filling.</li>
+                    <li>In a deep pan or skillet, heat vegetable oil for frying. The oil should be deep enough to fully
+                        submerge the pastels.</li>
+                    <li>Carefully place the pastels into the hot oil, frying them in small batches to avoid overcrowding
+                        the pan.</li>
+                    <li>Fry the pastels until they turn golden brown and crispy, turning them over once to ensure even
+                        cooking.</li>
+                    <li>Once cooked, remove the pastels from the oil and transfer them to a paper towel-lined plate to
+                        drain excess oil.</li>
+                    <li>Serve the pastels hot and enjoy them with your favorite dipping sauce or salsa.</li>
+                </ol>
+            </div>
+        </div>
+        <div class="recipes__recipe" id="mortadella-sandwich">
+            <h2 class="recipes__title2">Mortadella Sandwich</h2>
+            <img src="./assets/images/mortadella-sandwich.jpg"
+                alt="A mortadella sandwich on a chopping board with a knife close to it" class="recipes__photo">
+            <div class="recipes__ingredients">
+                <h3 class="recipes__titles">Ingredients:</h3>
+                <ul>
+                    <li>2 slices of bread</li>
+                    <li>4-6 slices of mortadella</li>
+                    <li>1-2 slices of cheese (such as provolone or Swiss)</li>
+                    <li>1 tablespoon mayonnaise</li>
+                    <li>1 tablespoon mustard</li>
+                    <li>Lettuce leaves</li>
+                    <li>Sliced tomatoes</li>
+                    <li>Sliced pickles (optional)</li>
+                    <li>Salt and pepper to taste</li>
+                </ul>
+            </div>
+            <div class="recipes__instructions">
+                <h3 class="recipes__titles">Instructions:</h3>
+                <ol>
+                    <li>Spread mayonnaise and mustard evenly on one side of each bread slice.</li>
+                    <li>Layer the mortadella slices on one of the bread slices.</li>
+                    <li>Place the cheese slices on top of the mortadella.</li>
+                    <li>Add lettuce leaves, sliced tomatoes, and pickles (if desired) on top of the cheese.</li>
+                    <li>Season with salt and pepper to taste.</li>
+                    <li>Cover the sandwich with the other bread slice, condiment side down.</li>
+                    <li>Press gently to hold the ingredients together.</li>
+                    <li>Cut the sandwich diagonally into two halves or into quarters.</li>
+                    <li>Serve and enjoy!</li>
+                </ol>
+            </div>
+        </div>
     </section>
 
 
