Add responsive for recipe page recipes section

--- a/recipes.html
+++ b/recipes.html
@@ -52,6 +52,70 @@
                 family and friends.</p>
         </div>
 
+        <div class="recipes__recipe" id="coxinha">
+            <h2 class="recipes__title2">Coxinha</h2>
+            <div class="recipes__container">
+                <img src="./assets/images/coxinha.jpg"
+                    alt="A feijoada (bean stew) inside of a bow with a dish with rice at the back"
+                    class="recipes__photo">
+                <div class="recipes__ingredients">
+                    <h3 class="recipes__title2">Ingredients:</h3>
+                    <ul>
+                        <li>2 cups cooked shredded chicken</li>
+                        <li>2 tablespoons olive oil</li>
+                        <li>1 small onion, finely chopped</li>
+                        <li>2 cloves garlic, minced</li>
+                        <li>1 cup chicken broth</li>
+                        <li>1 teaspoon salt</li>
+                        <li>1 cup all-purpose flour</li>
+                        <li>1 cup milk</li>
+                        <li>2 cups breadcrumbs</li>
+                        <li>Vegetable oil, for frying</li>
+                    </ul>
+                </div>
+                <div class="recipes__instructions">
+                    <h3 class="recipes__title2">Instructions:</h3>
+                    <ol>
+                        <li>
+                            Heat the olive oil in a large pan over medium heat. Add the chopped onion and minced garlic,
+                            and cook until the onion becomes translucent and fragrant.
+                        </li>
+                        <li>
+                            Add the shredded chicken to the pan and mix well with the onion and garlic.
+                        </li>
+                        <li>
+                            Pour in the chicken broth and season with salt. Cook for a few minutes until most of the
+                            liquid has evaporated, stirring occasionally. Remove from heat and set aside.
+                        </li>
+                        <li>
+                            In a separate saucepan, combine the flour and milk. Cook over medium heat, stirring
+                            constantly, until the mixture thickens and pulls away from the sides of the pan.
+                        </li>
+                        <li>
+                            Transfer the dough to a lightly floured surface and knead it for a few minutes until it
+                            becomes smooth and elastic.
+                        </li>
+                        <li>
+                            Take a small portion of the dough and flatten it in your hand. Place a spoonful of the
+                            chicken filling in the center and shape the dough into a teardrop-shaped coxinha, enclosing
+                            the filling completely. Repeat with the remaining dough and filling.
+                        </li>
+                        <li>
+                            Roll each coxinha in breadcrumbs until fully coated.
+                        </li>
+                        <li>
+                            In a deep pan, heat vegetable oil over medium heat. Fry the coxinhas in batches until they
+                            turn golden brown, turning them occasionally to ensure even frying. Remove from the oil and
+                            place them on a paper towel-lined plate to drain excess oil.
+                        </li>
+                        <li>
+                            Serve the coxinhas hot and enjoy!
+                        </li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+
         <div class="recipes__recipe" id="feijoada">
             <h2 class="recipes__title2">Feijoada</h2>
             <div class="recipes__container">
@@ -61,55 +125,187 @@
                 <div class="recipes__ingredients">
                     <h3 class="recipes__title2">Ingredients:</h3>
                     <ul>
-                        <li>500 grams (1 pound) of dried black beans</li>
-                        <li>500 grams (1 pound) of pork ribs</li>
-                        <li>500 grams (1 pound) of carne seca (dried beef)</li>
-                        <li>250 grams (1/2 pound) of smoked sausage (linguiça)</li>
-                        <li>250 grams (1/2 pound) of bacon</li>
-                        <li>1 large onion, finely chopped</li>
-                        <li>4 cloves of garlic, minced</li>
+                        <li>450 grams dried black beans</li>
+                        <li>1.9 liters water</li>
+                        <li>450 grams smoked ham hocks or pork shoulder</li>
+                        <li>450 grams smoked sausage, sliced</li>
+                        <li>1 tablespoon vegetable oil</li>
+                        <li>470 grams chopped onions</li>
+                        <li>240 grams chopped celery</li>
+                        <li>240 grams chopped carrots</li>
+                        <li>6 cloves garlic, minced</li>
                         <li>2 bay leaves</li>
-                        <li>Salt and pepper to taste</li>
-                        <li>Water (enough to cover the beans and meats)</li>
-                        <li>Farofa (toasted manioc flour) for serving</li>
-                        <li>Rice for serving</li>
-                        <li>Orange slices for serving</li>
+                        <li>1 teaspoon dried thyme</li>
+                        <li>1 teaspoon dried oregano</li>
+                        <li>1 teaspoon ground black pepper</li>
+                        <li>1/4 teaspoon cayenne pepper (optional)</li>
+                        <li>60 grams chopped fresh parsley</li>
+                        <li>Salt to taste</li>
                     </ul>
                 </div>
                 <div class="recipes__instructions">
                     <h3 class="recipes__title2">Instructions:</h3>
                     <ol>
-                        <li>Rinse the black beans and soak them overnight in water. Drain and set aside.</li>
-                        <li>In a large pot, add the soaked beans and enough water to cover them. Bring to a boil and
-                            cook
-                            for about 1 hour or until the beans are tender. Remove from heat and set aside.</li>
-                        <li>In a separate pot, add the pork ribs and enough water to cover them. Bring to a boil and
-                            cook
-                            for 10 minutes. Drain and set aside.</li>
-                        <li>In another pot, add the carne seca and enough water to cover it. Bring to a boil and cook
-                            for 10
-                            minutes. Drain and set aside.</li>
-                        <li>In a large skillet, cook the bacon until crispy. Remove the bacon from the skillet and set
-                            aside. In the same skillet, add the smoked sausage and cook until browned. Remove and set
-                            aside.
+                        <li>
+                            Rinse the black beans and place them in a large pot. Add water, cover, and let soak
+                            overnight. Drain and rinse the beans before proceeding.
                         </li>
-                        <li>In the same skillet, add the chopped onion and minced garlic. Sauté until the onion is
-                            translucent.</li>
-                        <li>Add the cooked pork ribs, carne seca, smoked sausage, and bay leaves to the skillet with the
-                            sautéed onions and garlic. Cook for a few minutes to combine the flavors.</li>
-                        <li>Transfer the meat mixture to the pot with the cooked black beans. Add enough water to cover
-                            the
-                            beans and meats. Bring to a boil and reduce the heat to low. Simmer for about 2 hours,
-                            stirring
-                            occasionally, until the meats are tender and the flavors are well blended. Add salt and
-                            pepper
-                            to taste.</li>
-                        <li>Remove the bay leaves before serving.</li>
-                        <li>Serve the feijoada hot with steamed rice, farofa, and orange slices on the side.</li>
+                        <li>
+                            In the same pot, combine the soaked black beans and 1.9 liters of fresh water. Bring to a
+                            boil over high heat. Reduce the heat to medium-low, cover, and simmer for 1 hour.
+                        </li>
+                        <li>
+                            Add the ham hocks or pork shoulder to the pot and continue simmering for an additional hour
+                            or until the beans are tender and the meat is cooked.
+                        </li>
+                        <li>
+                            In a separate skillet, heat the vegetable oil over medium heat. Add the sliced sausage and
+                            cook until browned. Remove the sausage from the skillet and set aside.
+                        </li>
+                        <li>
+                            In the same skillet, sauté the onions, celery, and carrots until the onions are translucent
+                            and the vegetables are tender.
+                        </li>
+                        <li>
+                            Add the minced garlic to the skillet and sauté for an additional minute.
+                        </li>
+                        <li>
+                            Transfer the cooked sausage, sautéed vegetables, bay leaves, thyme, oregano, black pepper,
+                            and cayenne pepper (if using) to the pot of beans and meat.
+                        </li>
+                        <li>
+                            Continue simmering the feijoada for another 30 minutes, uncovered. Stir occasionally and add
+                            water if needed to maintain the desired consistency.
+                        </li>
+                        <li>
+                            Stir in the chopped parsley and season with salt to taste.
+                        </li>
+                        <li>
+                            Remove the bay leaves before serving.
+                        </li>
+                        <li>
+                            Serve the feijoada hot with white rice, collard greens, farofa (toasted cassava flour), and
+                            orange slices on the side.
+                        </li>
                     </ol>
                 </div>
             </div>
+        </div>
 
+        <div class="recipes__recipe" id="pastel">
+            <h2 class="recipes__title2">Pastel</h2>
+            <div class="recipes__container">
+                <img src="./assets/images/pastel.jpg"
+                    alt="A feijoada (bean stew) inside of a bow with a dish with rice at the back"
+                    class="recipes__photo">
+                <div class="recipes__ingredients">
+                    <h3 class="recipes__title2">Ingredients:</h3>
+                    <ul>
+                        <li>250 grams all-purpose flour</li>
+                        <li>1/2 teaspoon salt</li>
+                        <li>120 milliliters water</li>
+                        <li>30 milliliters vegetable oil</li>
+                        <li>Fillings of your choice (e.g., ground meat, cheese, ham, chicken, shrimp, hearts of palm)
+                        </li>
+                        <li>Vegetable oil, for frying</li>
+                    </ul>
+                </div>
+                <div class="recipes__instructions">
+                    <h3 class="recipes__title2">Instructions:</h3>
+                    <ol>
+                        <li>
+                            In a large mixing bowl, combine the flour and salt. Gradually add the water and vegetable
+                            oil while mixing with a fork or your hands until a smooth dough forms. Knead the dough for a
+                            few minutes until it becomes elastic.
+                        </li>
+                        <li>
+                            Cover the dough with a clean kitchen towel and let it rest for 15-20 minutes.
+                        </li>
+                        <li>
+                            Roll out the dough on a lightly floured surface until it's thin, about 3-4 millimeters
+                            thick.
+                        </li>
+                        <li>
+                            Cut the dough into circles or rectangles, approximately 8-10 centimeters in diameter.
+                        </li>
+                        <li>
+                            Place a small amount of filling (e.g., ground meat, cheese, ham, chicken, shrimp, hearts of
+                            palm) in the center of each piece of dough.
+                        </li>
+                        <li>
+                            Fold the dough over the filling and press the edges firmly to seal, using a fork to crimp
+                            the edges.
+                        </li>
+                        <li>
+                            In a large skillet or deep fryer, heat vegetable oil over medium-high heat to approximately
+                            175°C (350°F).
+                        </li>
+                        <li>
+                            Carefully place a few pastels at a time into the hot oil and fry until golden brown, turning
+                            once.
+                        </li>
+                        <li>
+                            Remove the pastels from the oil using a slotted spoon or tongs and place them on a paper
+                            towel-lined plate to drain excess oil.
+                        </li>
+                        <li>
+                            Serve the pastels hot with your favorite dipping sauce, such as hot sauce or tomato salsa.
+                        </li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+
+        <div class="recipes__recipe" id="mortadella-sandwich">
+            <h2 class="recipes__title2">Mortadella Sandwich</h2>
+            <div class="recipes__container">
+                <img src="./assets/images/mortadella-sandwich.jpg"
+                    alt="A feijoada (bean stew) inside of a bow with a dish with rice at the back"
+                    class="recipes__photo">
+                <div class="recipes__ingredients">
+                    <h3 class="recipes__title2">Ingredients:</h3>
+                    <ul>
+                        <li>2 slices of bread (your choice of bread type)</li>
+                        <li>4-6 slices of mortadella</li>
+                        <li>1-2 slices of cheese (such as provolone or mozzarella)</li>
+                        <li>Mustard or mayonnaise (optional)</li>
+                        <li>Lettuce leaves</li>
+                        <li>Sliced tomatoes</li>
+                        <li>Sliced pickles (optional)</li>
+                        <li>Salt and pepper to taste</li>
+                    </ul>
+                </div>
+                <div class="recipes__instructions">
+                    <h3 class="recipes__title2">Instructions:</h3>
+                    <ol>
+                        <li>
+                            Lay the slices of bread on a clean surface.
+                        </li>
+                        <li>
+                            If desired, spread mustard or mayonnaise on one or both slices of bread.
+                        </li>
+                        <li>
+                            Place the mortadella slices evenly on one slice of bread.
+                        </li>
+                        <li>
+                            Layer the cheese slices on top of the mortadella.
+                        </li>
+                        <li>
+                            Add lettuce leaves, sliced tomatoes, and pickles (if using) on top of the cheese.
+                        </li>
+                        <li>
+                            Sprinkle with salt and pepper to taste.
+                        </li>
+                        <li>
+                            Close the sandwich with the other slice of bread.
+                        </li>
+                        <li>
+                            Cut the sandwich in half if desired, and serve immediately.
+                        </li>
+                    </ol>
+                </div>
+            </div>
+        </div>
 
     </section>
 
