Adjustments on resonsive recipes.html page, create contact.html

--- a/recipes.html
+++ b/recipes.html
@@ -264,7 +264,7 @@
                     class="recipes__photo">
                 <div class="recipes__ingredients">
                     <h3 class="recipes__title2">Ingredients:</h3>
-                    <ul>
+                    <ul class="recipes__ingredients-list">
                         <li>2 slices of bread (your choice of bread type)</li>
                         <li>4-6 slices of mortadella</li>
                         <li>1-2 slices of cheese (such as provolone or mozzarella)</li>
@@ -277,7 +277,7 @@
                 </div>
                 <div class="recipes__instructions">
                     <h3 class="recipes__title2">Instructions:</h3>
-                    <ol>
+                    <ol class="recipes__instructions-list">
                         <li>
                             Lay the slices of bread on a clean surface.
                         </li>
