--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="header__items">
                 <li class="header__item"><a href="#" class="header__link header__item--selected">Home</a></li>
                 <li class="header__item"><a href="recipes.html" class="header__link">Recipes</a></li>
-                <li class="header__item header__item--last"><a href="#" class="header__link">Contact</a></li>
+                <li class="header__item header__item--last"><a href="contact.html" class="header__link">Contact</a></li>
             </ul>
         </nav>
     </header>
