--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
             <h1>We are always looking for new recipes and restaurants!</h1>
             <p>Would you like to recommend something? Please enter in contact with us using the following form:</p>
 
-            <form action="/submit_recommendation" method="post" class="contact__form">
+            <form method="post" action="https://formdump.codeinstitute.net/" class="contact__form">
                 <label for="name" class="contact__label">Name:</label>
                 <br>
                 <input type="text" id="name" name="name" required><br><br>
